[feature]add more responses
