# docs/swagger.json
@@ -32,19 +32,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/api.BadRequestResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/api.NotFoundResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/api.ErrorResponse"
+                            "$ref": "#/definitions/api.InternalServerErrorResponse"
                         }
                     }
                 }
@@ -52,7 +52,7 @@
         }
     },
     "definitions": {
-        "api.ErrorResponse": {
+        "api.BadRequestResponse": {
             "type": "object",
             "properties": {
                 "label": {
@@ -60,6 +60,12 @@
                     "example": "unknown"
                 }
             }
+        },
+        "api.InternalServerErrorResponse": {
+            "type": "object"
+        },
+        "api.NotFoundResponse": {
+            "type": "object"
         }
     }
 }
